<resources>
    <string name="app_name">MovieApp</string>
    <string name="action_settings">Settings</string>

    <string name="menu_wishlist">WishList</string>
    <string name="menu_films">Films</string>
    <string name="menu_series">Series</string>
    <string name="menu_settings">Settings</string>

    <string name="nav_header_acc_name">My Account</string>
    <string name="nav_header_email">myemail@gmail.com</string>
    <string name="nav_header_desc">My Avatar</string>
    <string name="dunkan_crack_2">Dunkan Crack 2</string>
    <string name="someText">testText</string>

    <string name="error">Ошибка!</string>
    <string name="reload">Обновить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate">calcultate</string>
    <string name="in_main_thread">In Main Thread</string>
    <string name="content_provider">Content</string>
    <string name="menu_title_history">History</string>
    <string name="enter_query">Enter here</string>
    <string name="search">Search</string>
    <string name="start_marker">marker</string>
    <string name="dialog_address_title">address here</string>
    <string name="dialog_button_close">close</string>
    <string name="dialog_message_no_gps">NO GPS</string>
</resources>