<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_wishlist" />
        <item
            android:id="@+id/nav_films"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_films" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/menu_series" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/menu_content_provider"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/content_provider"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_history"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/menu_title_history"
            app:showAsAction="always" />
    </group>
</menu>