<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_wishlist">

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.example.movieapp.ui.wishlist.WishListFragment"
        android:label="@string/menu_wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/nav_films"
        android:name="com.example.movieapp.ui.films.FilmsFragment"
        android:label="@string/menu_films"
        tools:layout="@layout/fragment_films" />

    <fragment
        android:id="@+id/nav_series"
        android:name="com.example.movieapp.ui.series.SeriesFragment"
        android:label="@string/menu_series"
        tools:layout="@layout/fragment_series" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.movieapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>